infra/istio/routes/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - "grafana.local"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
