infra/istio/routes/otel-grpc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-grpc-route
  namespace: tracing
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
      sectionName: otlp-grpc
  rules:
    - backendRefs:
        - name: otel-collector-opentelemetry-collector
          port: 4317
