infra/istio/routes/prometheus-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - "prometheus.local"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
