infra/istio/routes/tempo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tempo-route
  namespace: tracing
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - "tempo.local"
  rules:
    - backendRefs:
        - name: tempo
          port: 3200
